Debug: Changing images do png

--- a/_notebooks/2021-09-20-Leitura_de_Dados_Binários_Comprimidos_Otimização_Gradual_em_Python.ipynb
+++ b/_notebooks/2021-09-20-Leitura_de_Dados_Binários_Comprimidos_Otimização_Gradual_em_Python.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "source": [
     "# Leitura de dados binários comprimidos - um exemplo de otimização gradual em Python\r\n",
-    "\r\n",
     "> As atividades de monitoramento do espectro de radiofrequência na ANATEL, especificamente aquelas que utilizam estações remotas de monitoramento, geram centenas de GB de dados. Um dos primeiros desafios para a utilização mais eficiente desses dados é a sua leitura eficiente. Nesse artigo é detalhada as iterações realizadas para resolver esse problema, primeiramente tornar essa leitura viável e posteriormente os passos de otimização aplicados no algoritmo para decodificar os dados de arquivos comprimidos \r\n",
     "\r\n",
     "- toc: true\r\n",
@@ -12,7 +11,7 @@
     "- badges: true\r\n",
     "- comments: true\r\n",
     "- categories: [spectrum monitoring, profiling, numpy, cython]\r\n",
-    "- image: images/devil.jpg\r\n",
+    "- image: images/devil.png\r\n",
     "- hide_binder_badge: true\r\n",
     "- author: Ronaldo S.A. Batista"
    ],
@@ -23,7 +22,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![](images/knuth.jpg \"Crédito da Imagem: https://twitter.com/lpolovets/status/816117631572807680\")"
+    "![](images/knuth.png \"Crédito da Imagem: https://twitter.com/lpolovets/status/816117631572807680\")"
    ],
    "metadata": {
     "id": "024af387"
