Changed .jpg images to .png in notebooks

--- a/_notebooks/2021-09-20-Leitura_de_Dados_Binários_Comprimidos_Otimização_Gradual_em_Python.ipynb
+++ b/_notebooks/2021-09-20-Leitura_de_Dados_Binários_Comprimidos_Otimização_Gradual_em_Python.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#hide\n",
+    "#hide\r\n",
     "%load_ext line_profiler"
    ],
    "outputs": [],
@@ -174,20 +174,20 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import os\n",
-    "from tqdm.notebook import tqdm\n",
-    "from time import sleep\n",
-    "from fastcore.xtras import Path\n",
-    "import gc\n",
-    "import warnings\n",
-    "with warnings.catch_warnings():\n",
-    "    warnings.simplefilter(\"ignore\")\n",
-    "from rfpye.parser import parse_bin\n",
-    "from rfpye.utils import public_attrs\n",
-    "from fastcore.foundation import L\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from rich import print\n",
+    "import os\r\n",
+    "from tqdm.notebook import tqdm\r\n",
+    "from time import sleep\r\n",
+    "from fastcore.xtras import Path\r\n",
+    "import gc\r\n",
+    "import warnings\r\n",
+    "with warnings.catch_warnings():\r\n",
+    "    warnings.simplefilter(\"ignore\")\r\n",
+    "from rfpye.parser import parse_bin\r\n",
+    "from rfpye.utils import public_attrs\r\n",
+    "from fastcore.foundation import L\r\n",
+    "import numpy as np\r\n",
+    "import pandas as pd\r\n",
+    "from rich import print\r\n",
     "from IPython.display import display"
    ],
    "outputs": [],
@@ -203,11 +203,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "blocks = parse_bin('rfeye002092_210223_T163131_MaskBroken.bin')\n",
-    "\n",
-    "blocks = blocks['blocks']\n",
-    "\n",
-    "for k,v in blocks.items():\n",
+    "blocks = parse_bin('rfeye002092_210223_T163131_MaskBroken.bin')\r\n",
+    "\r\n",
+    "blocks = blocks['blocks']\r\n",
+    "\r\n",
+    "for k,v in blocks.items():\r\n",
     "    print(f'Tipo de Bloco: {k[0]}, Thread_ID: {k[1]}, Nº de blocos {len(v)}, Exemplo de Blocos: {v[0]}')"
    ],
    "outputs": [
@@ -538,9 +538,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "b301 = blocks[(68,301)][0]\n",
-    "b321 = blocks[(68,321)][0]\n",
-    "b331 = blocks[(68,331)][0]\n",
+    "b301 = blocks[(68,301)][0]\r\n",
+    "b321 = blocks[(68,321)][0]\r\n",
+    "b331 = blocks[(68,331)][0]\r\n",
     "b341 = blocks[(68,341)][0]"
    ],
    "outputs": [],
@@ -922,50 +922,50 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "RUN = 255\n",
-    "ESC = 254\n",
-    "def run_length_encode(destino, origem, n_origem, limiar):\n",
-    "    \n",
-    "    conta_origem, conta_destino = 0,0 # si, and di\n",
-    "    \n",
-    "    num_under = 0\n",
-    "    for si in range(n_origem): # percorro as posições do arquivo de origem\n",
-    "        \n",
-    "        byte_atual = origem[si] # leio o byte do arquivo fonte correspondente à posição si\n",
-    "        \n",
-    "        # Se o byte está abaixo do limiar e não atingi o fim do arquivo ou a contagem máxima\n",
-    "        if (byte_atual < limiar) and (si < n_origem - 1) and (num_under < 250):\n",
-    "            \n",
-    "            num_under += 1 # incremento o contador de valor abaixo do limiar\n",
-    "        else:\n",
-    "            if num_under > 0: # valor atual está acima do limiar mas até o momento estávamos contando valores abaixo do limiar\n",
-    "                \n",
-    "                destination[conta_destino] = RUN # insiro o marcador de contagem de valores abaixo do limiar na posição atual do arquivo de destino\n",
-    "                \n",
-    "                conta_destino += 1 # incremento o contador do arquivo de destino\n",
-    "                \n",
-    "                destination[conta_destino] = num_under # coloco a contagem em si na próxima posição\n",
-    "                \n",
-    "                conta_destino += 1 # incremento o contador do arquivo de destino\n",
-    "                \n",
-    "                num_under = 0 # zero o contador de valores abaixo do limiar\n",
-    "                \n",
-    "            if (byte_atual == RUN) or (byte_atual == ESC): # checo se o valor lido atual corresponde a um dos valores utilizados como marcador\n",
-    "                \n",
-    "                destination[conta_destino] = ESC # coloco o marcador que o valor a seguir lido é literal\n",
-    "                \n",
-    "                conta_destino += 1 # incremento o contador do arquivo de destino\n",
-    "                \n",
-    "                destination[conta_destino] = byte_atual\n",
-    "                \n",
-    "                conta_destino += 1 # incremento o contador do arquivo de destino\n",
-    "                \n",
-    "            else: # caso o valor medido não corresponda a um dos valores reservador de marcador eu simplesmente guardo esse valor na posição atual\n",
-    "                \n",
-    "                destination[conta_destino] = byte_atual\n",
-    "                \n",
-    "                conta_destino += 1 # incremento o contador do arquivo de destino\n",
-    "                \n",
+    "RUN = 255\r\n",
+    "ESC = 254\r\n",
+    "def run_length_encode(destino, origem, n_origem, limiar):\r\n",
+    "    \r\n",
+    "    conta_origem, conta_destino = 0,0 # si, and di\r\n",
+    "    \r\n",
+    "    num_under = 0\r\n",
+    "    for si in range(n_origem): # percorro as posições do arquivo de origem\r\n",
+    "        \r\n",
+    "        byte_atual = origem[si] # leio o byte do arquivo fonte correspondente à posição si\r\n",
+    "        \r\n",
+    "        # Se o byte está abaixo do limiar e não atingi o fim do arquivo ou a contagem máxima\r\n",
+    "        if (byte_atual < limiar) and (si < n_origem - 1) and (num_under < 250):\r\n",
+    "            \r\n",
+    "            num_under += 1 # incremento o contador de valor abaixo do limiar\r\n",
+    "        else:\r\n",
+    "            if num_under > 0: # valor atual está acima do limiar mas até o momento estávamos contando valores abaixo do limiar\r\n",
+    "                \r\n",
+    "                destination[conta_destino] = RUN # insiro o marcador de contagem de valores abaixo do limiar na posição atual do arquivo de destino\r\n",
+    "                \r\n",
+    "                conta_destino += 1 # incremento o contador do arquivo de destino\r\n",
+    "                \r\n",
+    "                destination[conta_destino] = num_under # coloco a contagem em si na próxima posição\r\n",
+    "                \r\n",
+    "                conta_destino += 1 # incremento o contador do arquivo de destino\r\n",
+    "                \r\n",
+    "                num_under = 0 # zero o contador de valores abaixo do limiar\r\n",
+    "                \r\n",
+    "            if (byte_atual == RUN) or (byte_atual == ESC): # checo se o valor lido atual corresponde a um dos valores utilizados como marcador\r\n",
+    "                \r\n",
+    "                destination[conta_destino] = ESC # coloco o marcador que o valor a seguir lido é literal\r\n",
+    "                \r\n",
+    "                conta_destino += 1 # incremento o contador do arquivo de destino\r\n",
+    "                \r\n",
+    "                destination[conta_destino] = byte_atual\r\n",
+    "                \r\n",
+    "                conta_destino += 1 # incremento o contador do arquivo de destino\r\n",
+    "                \r\n",
+    "            else: # caso o valor medido não corresponda a um dos valores reservador de marcador eu simplesmente guardo esse valor na posição atual\r\n",
+    "                \r\n",
+    "                destination[conta_destino] = byte_atual\r\n",
+    "                \r\n",
+    "                conta_destino += 1 # incremento o contador do arquivo de destino\r\n",
+    "                \r\n",
     "    return destination            "
    ],
    "outputs": [],
@@ -1001,9 +1001,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "destination = [0] * 10 #lista com 10 valores 0\n",
-    "offset = -20\n",
-    "limiar = -80\n",
+    "destination = [0] * 10 #lista com 10 valores 0\r\n",
+    "offset = -20\r\n",
+    "limiar = -80\r\n",
     "medidas = [-100] * 10 #lista com 10 valores com nível -100"
    ],
    "outputs": [],
@@ -3148,47 +3148,47 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "%%cython --annotate\n",
-    "\n",
-    "cimport cython\n",
-    "import numpy as np\n",
-    "cimport numpy as np #necessário para usar o numpy com o Cython\n",
-    "\n",
-    "ctypedef np.float32_t DTYPE_t # Defino um tipo numérico em C, a ser utilizado no vetor a ser retornado.\n",
-    "\n",
-    "@cython.boundscheck(False)\n",
-    "@cython.wraparound(False)\n",
-    "cpdef np.ndarray[DTYPE_t, ndim=2] cy_decode_blocks(list data, int rows, int cols, int thresh, float MIN):\n",
-    "    cdef np.ndarray[DTYPE_t, ndim=2] decoded = np.full((rows, cols), thresh, np.float32)\n",
-    "    cdef const unsigned char[:] src\n",
-    "    cdef int RUN = 255\n",
-    "    cdef int ESC = 254\n",
-    "    cdef int NRSC\n",
-    "    cdef int i\n",
-    "    cdef int j\n",
-    "    cdef int ib\n",
-    "    cdef int nrun\n",
-    "    cdef Py_ssize_t row   \n",
-    "    for row in range(rows):\n",
-    "        src = data[row]\n",
-    "        nsrc = len(src)\n",
-    "        i = 0\n",
-    "        j = 0\n",
-    "        while i < nsrc:\n",
-    "            ib = src[i]\n",
-    "            i+=1\n",
-    "            if ib == RUN:\n",
-    "                nrun = src[i] \n",
-    "                i+=1\n",
-    "                j+=nrun\n",
-    "            elif ib == ESC:\n",
-    "                # next value is literal\n",
-    "                decoded[row, j] = MIN + src[i]/2.\n",
-    "                i+=1 ; j+=1\n",
-    "            else:\n",
-    "                # value\n",
-    "                decoded[row, j] = MIN + ib/2.\n",
-    "                j+=1\n",
+    "%%cython --annotate\r\n",
+    "\r\n",
+    "cimport cython\r\n",
+    "import numpy as np\r\n",
+    "cimport numpy as np #necessário para usar o numpy com o Cython\r\n",
+    "\r\n",
+    "ctypedef np.float32_t DTYPE_t # Defino um tipo numérico em C, a ser utilizado no vetor a ser retornado.\r\n",
+    "\r\n",
+    "@cython.boundscheck(False)\r\n",
+    "@cython.wraparound(False)\r\n",
+    "cpdef np.ndarray[DTYPE_t, ndim=2] cy_decode_blocks(list data, int rows, int cols, int thresh, float MIN):\r\n",
+    "    cdef np.ndarray[DTYPE_t, ndim=2] decoded = np.full((rows, cols), thresh, np.float32)\r\n",
+    "    cdef const unsigned char[:] src\r\n",
+    "    cdef int RUN = 255\r\n",
+    "    cdef int ESC = 254\r\n",
+    "    cdef int NRSC\r\n",
+    "    cdef int i\r\n",
+    "    cdef int j\r\n",
+    "    cdef int ib\r\n",
+    "    cdef int nrun\r\n",
+    "    cdef Py_ssize_t row   \r\n",
+    "    for row in range(rows):\r\n",
+    "        src = data[row]\r\n",
+    "        nsrc = len(src)\r\n",
+    "        i = 0\r\n",
+    "        j = 0\r\n",
+    "        while i < nsrc:\r\n",
+    "            ib = src[i]\r\n",
+    "            i+=1\r\n",
+    "            if ib == RUN:\r\n",
+    "                nrun = src[i] \r\n",
+    "                i+=1\r\n",
+    "                j+=nrun\r\n",
+    "            elif ib == ESC:\r\n",
+    "                # next value is literal\r\n",
+    "                decoded[row, j] = MIN + src[i]/2.\r\n",
+    "                i+=1 ; j+=1\r\n",
+    "            else:\r\n",
+    "                # value\r\n",
+    "                decoded[row, j] = MIN + ib/2.\r\n",
+    "                j+=1\r\n",
     "    return decoded"
    ],
    "outputs": [],
@@ -3215,7 +3215,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![](images/cython.jpg)"
+    "![](images/cython.png)"
    ],
    "metadata": {}
   },
@@ -3272,14 +3272,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "%%time\n",
-    "# dados fixos\n",
-    "offset = compressed_blocks[0].offset\n",
-    "MIN = offset - 127.5\n",
-    "cols = compressed_blocks[0].ndata\n",
-    "thresh = compressed_blocks[0].thresh\n",
-    "rows = len(compressed_blocks)\n",
-    "data_blocks = [b.data[b.start:b.stop] for b in compressed_blocks] # colocar os dados de espectro diretamente numa lista\n",
+    "%%time\r\n",
+    "# dados fixos\r\n",
+    "offset = compressed_blocks[0].offset\r\n",
+    "MIN = offset - 127.5\r\n",
+    "cols = compressed_blocks[0].ndata\r\n",
+    "thresh = compressed_blocks[0].thresh\r\n",
+    "rows = len(compressed_blocks)\r\n",
+    "data_blocks = [b.data[b.start:b.stop] for b in compressed_blocks] # colocar os dados de espectro diretamente numa lista\r\n",
     "d = cy_decode_blocks(data_blocks, rows, cols, thresh, MIN)"
    ],
    "outputs": [
